# BC-ABCD-denoise

./: .gitignore  LICENSE  MANIFEST.in  README.md  check_done_analyses.csv  data_legend.csv  data_legend2.csv  fig02-he-data.csv  pyproject.toml  setup.py
Code/: 000-download-from-NDAR.sh  010-make_bids.ipynb  020-check-fmriprep.ipynb  021-unzip-fmriprepped.ipynb  030-make-multiconds.ipynb  040-check-t-values.ipynb  050-Make-Masks.ipynb  051-Make-Masks-strict-csf.ipynb  062-Forrest-Corr2Reg-baselines.ipynb  072-DeepCorr-gamma-BEFORECHANGE.ipynb  072-DeepCorr-gamma.ipynb  073-DeepCorr-gamma.ipynb  075-DeepCorr-gamma-Copy1.ipynb  075-DeepCorr-gamma.ipynb  076-DeepCorr-dev-NL.ipynb  076-DeepCorr-dev.ipynb  076-DeepCorr-pp-NL-vanilla.ipynb  076-DeepCorr-pp-NL.ipynb  077-DeepCorr-Forrest-LIN.ipynb  077-DeepCorr-Forrest-NLIN.ipynb  078-DeepCorr-Forrest-ForStefano-1.ipynb  078-DeepCorr-Forrest-ForStefano-10-5.ipynb  078-DeepCorr-Forrest-ForStefano-10-6.ipynb  078-DeepCorr-Forrest-ForStefano-10-7-long.ipynb  078-DeepCorr-Forrest-ForStefano-10-8-big.ipynb  080-check-all-done.ipynb  081-DeepCorr-ABIDE-FC-01 2.ipynb  082-DeepCorr-ABCD-face-01.ipynb  082-DeepCorr-ABCD-face-02.ipynb  082-DeepCorr-ABCD-face-03.ipynb  082-DeepCorr-ABCD-face-04.ipynb  082-DeepCorr-ABCD-face-05.ipynb  082-DeepCorr-ABCD-face-06.ipynb  083-Forrest-average-signal-maps.ipynb  090-init-analysis.ipynb  091-analyze-DeNN-forrest-02.ipynb  091-analyze-deepcor-ABCD-01.ipynb  091-analyze-deepcor-forrest-01.ipynb  091-analyze-deepcor-forrest-02.ipynb  091-analyze-deepcor-forrest-03-NatMethods-Figure.ipynb  (+144 more)
Code/Archive/: 070-DeepCorr.ipynb  071-DeepCorr-synth.ipynb  072-DeepCorr-gamma-dev-2.ipynb  072-DeepCorr-gamma-dev.ipynb  072-DeepCorr-gamma-synth.ipynb  073-DeepCorr-gamma.ipynb  073-DeepCorr-synth-gamma.ipynb  074-DeepCorr-gamma.ipynb  075-DeepCorr.ipynb  076-DeepCorr-pp-NL-newTC.ipynb  076-DeepCorr-pp.ipynb  (+24 more)
Misc/: temp.csv
(+14 files in other folders)
