[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abcd-denoise"
version = "0.1.0"
description = "DeepCorr: Deep learning-based denoising for ABCD and other fMRI datasets"
readme = "README.md"
authors = [
    {name = "BC-ABCD-denoise Team"}
]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "pandas>=1.2.0",
    "scikit-learn>=0.24.0",
    "nibabel>=3.2.0",
    "nilearn>=0.8.0",
    "antspyx>=0.3.0",
    "torch>=1.8.0",
    "tqdm>=4.50.0",
    "seaborn>=0.11.0",
    "pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=19.10b0",
    "flake8>=3.8.0",
    "jupyter>=1.0.0",
    "jupyterlab>=3.0.0",
    "papermill>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/BC-ABCD-denoise"
Documentation = "https://github.com/yourusername/BC-ABCD-denoise/blob/main/README.md"
Repository = "https://github.com/yourusername/BC-ABCD-denoise"

[tool.setuptools]
packages = ["abcd_denoise", "abcd_denoise.adversarial"]

[tool.setuptools.package-dir]
abcd_denoise = "Code"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
